Removed Badass Runtime Plugin.