@@ -39,36 +39,98 @@ task dist(type: Jar) {
 dist.dependsOn classes
 run.dependsOn classes
 
-runtime {
-    modules = ['java.base', 'java.desktop', 'jdk.unsupported', 'jdk.unsupported.desktop','java.logging']
-    options = ['--strip-debug', '--no-header-files', '--no-man-pages', '--strip-native-commands', '--compress', '2']
-    javaHome = "${projectDir}/jdk-14"
-    
-    jpackage {
-    	jpackageHome = "${projectDir}/jdk-14"
-    	imageOutputDir = file(releasesDir)
-		imageName = 'AO-Java'
-		
-		if (osName().contains('windows')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.ico",
-							'--app-version', "${project.version}"]
-		} else if (osName().contains('linux')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.png",
-							'--app-version', "${project.version}"]
-		} else if (osName().contains('mac')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.icns",
-							'--app-version', "${project.version}"]
+// creates application bundle (executable + runtime)
+task jpackageStart(type: Exec, dependsOn: dist) {
+
+	doFirst() {
+		delete("${buildDir}/distribution/$project.appName")
+	}
+
+	workingDir projectDir
+	def commands = [
+			"${projectDir}/jdk-14/bin/jpackage",
+			'--output', "${buildDir}/distribution",
+			'--input', "${buildDir}/libs",
+			'--name', project.appName,
+			'--main-class', project.mainClassName,
+			'--main-jar', "${project.name}-${project.version}.jar"
+	]
+
+	if (osName().contains('windows')) {
+		commands << '--icon'
+		commands << "${projectDir}/assets/ao.ico"
+	} else if (osName().contains('linux')) {
+		commands << '--icon'
+		commands << "${projectDir}/assets/ao.png"
+	} else if (osName().contains('mac')) {
+		commands << '--icon'
+		commands << "${projectDir}/assets/ao.icns"
+	}
+
+	commandLine = commands
+
+	doLast() {
+		if (!osName().contains('mac')) {
+			copy {
+				from "${projectDir}/assets/ao.png"
+				into "${buildDir}/distribution/${project.appName}/app"
+			}
 		}
-		
-        if (osName().contains('mac')) {
-        	jvmArgs = ['-XstartOnFirstThread']
-    	}
-		
-        skipInstaller = true
-    }
+	}
 }
 
-tasks.jre.doFirst {
+// removes bloated runtime created by javapackager
+task jpackageCleanRuntime(dependsOn: jpackageStart) {
+	doLast() {
+		File runtimeFile = file("${buildDir}/distribution/${project.appName}/runtime")
+		if (osName().contains('mac')) {
+			runtimeFile = file("${buildDir}/distribution/${project.appName}.app/contents/plugins/Java.runtime/Contents/Home")
+		}
+
+		delete(runtimeFile)
+
+		delete fileTree("${buildDir}/distribution/${project.appName}").matching {
+			include "api*.dll"
+		}
+
+		System.out.println("Deleting bloated runtime in " + runtimeFile)
+	}
+}
+
+// creates a replacement runtime via jlink command (much smaller than jpackage)
+task jpackageAppBundle(type: Exec, dependsOn: [jpackageCleanRuntime]) {
+	String runtimePath = "${buildDir}/distribution/${project.appName}/runtime"
+	if (osName().contains('mac')) {
+		runtimePath = "${buildDir}/distribution/${project.appName}.app/contents/plugins/Java.runtime/Contents/Home"
+	}
+
+	workingDir projectDir
+	commandLine = [
+			"${projectDir}/jdk-14/bin/jlink",
+			'-p', "${projectDir}/jdk-14/jmods",
+			'--add-modules', 'java.base,java.desktop,jdk.unsupported,java.logging',
+			'--strip-debug',
+			'--no-header-files',
+			'--no-man-pages',
+			'--strip-native-commands',
+			"--vm=server",
+			"--compress=2",
+			'--output', runtimePath
+	]
+
+	doLast{
+
+        copy {
+			from("${projectDir}/assets")
+			into("${buildDir}/distribution/${project.appName}/app/assets")
+		}
+		
+		System.out.println("Application '${project.appName}' packaged.")
+		System.out.println(" -> location: ${buildDir}/distribution/${project.appName}/")
+	}
+}
+
+tasks.jpackageStart.doFirst {
 	
 	download {
 
@@ -97,18 +159,5 @@ tasks.jre.doFirst {
 			
 			into projectDir
 		}
-	}
-}
-
-tasks.jpackage.doFirst {
-	if (!file(releasesDir).exists()) {
-		releasesDir.mkdirs()
-	}
-}
-
-tasks.jpackage.doLast {
-	copy {
-		from file("assets")
-		into file("$releasesDir/AO-Java/app/assets")
 	}
 }
